<resources>
    <string name="app_name">MovieApp</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="about">About</string>
    <string name="photo">Photo</string>
    <string name="author">Antonius Krisargo Wisnuaji Nugroho</string>
    <string name="email">antonius.kri2003@mail.ugm.ac.id</string>
    <string name="title_app">Movie App</string>
    <string name="popular">Popular</string>
    <string name="now_playing">Now Playing</string>
    <string name="duration">Duration</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="genre">Genre</string>
    <string name="elemental">Elemental</string>
    <string name="overview">Overview</string>

    <string-array name="data_title">
        <item>Elemental</item>
        <item>Heart of Stone</item>
        <item>Spider-Man: Across the Spider-Verse</item>
        <item>Transformers: Rise of the Beasts</item>
        <item>Barbie</item>
        <item>The Flash</item>
        <item>Meg 2: The Trench</item>
        <item>The Flood</item>
        <item>Cobweb</item>
        <item>No Hard Geelings</item>
    </string-array>

    <string-array name="data_description">
        <item>In a city where fire, water, land and air residents live together, a fiery young woman and a go-with-the-flow guy will discover something elemental: how much they have in common.</item>
        <item>An intelligence operative for a shadowy global peacekeeping agency races to stop a hacker from stealing its most valuable — and dangerous — weapon</item>
        <item>After reuniting with Gwen Stacy, Brooklyn’s full-time, friendly neighborhood Spider-Man is catapulted across the Multiverse, where he encounters the Spider Society, a team of Spider-People charged with protecting the Multiverse’s very existence. But when the heroes clash on how to handle a new threat, Miles finds himself pitted against the other Spiders and must set out on his own to save those he loves most.</item>
        <item>When a new threat capable of destroying the entire planet emerges, Optimus Prime and the Autobots must team up with a powerful faction known as the Maximals. With the fate of humanity hanging in the balance, humans Noah and Elena will do whatever it takes to help the Transformers as they engage in the ultimate battle to save Earth.</item>
        <item>Barbie and Ken are having the time of their lives in the colorful and seemingly perfect world of Barbie Land. However, when they get a chance to go to the real world, they soon discover the joys and perils of living among humans.</item>
        <item>When his attempt to save his family inadvertently alters the future, Barry Allen becomes trapped in a reality in which General Zod has returned and there are no Super Heroes to turn to. In order to save the world that he is in and return to the future that he knows, Barrys only hope is to race for his life. But will making the ultimate sacrifice be enough to reset the universe?</item>
        <item>An exploratory dive into the deepest depths of the ocean of a daring research team spirals into chaos when a malevolent mining operation threatens their mission and forces them into a high-stakes battle for survival.</item>
        <item>A horde of giant hungry alligators is unleashed on a group of in-transit prisoners and their guards after a massive hurricane floods Louisiana.</item>
        <item>Eight year old Peter is plagued by a mysterious, constant tapping from inside his bedroom wall—one that his parents insist is all in his imagination. As Peters fear intensifies, he believes that his parents could be hiding a terrible, dangerous secret and questions their trust.</item>
        <item>On the brink of losing her childhood home, Maddie discovers an intriguing job listing: wealthy helicopter parents looking for someone to “date” their introverted 19-year-old son, Percy, before he leaves for college. To her surprise, Maddie soon discovers the awkward Percy is no sure thing.</item>
    </string-array>

    <string-array name="data_photo">
        <item>@drawable/elemental</item>
        <item>@drawable/heart_of_stone</item>
        <item>@drawable/spider_man</item>
        <item>@drawable/transformers</item>
        <item>@drawable/barbie</item>
        <item>@drawable/the_flash</item>
        <item>@drawable/meg2</item>
        <item>@drawable/the_flood</item>
        <item>@drawable/cobweb</item>
        <item>@drawable/no_hard_feelings</item>
    </string-array>

    <string-array name="data_release">
        <item>2023-06-14</item>
        <item>2023-08-09</item>
        <item>2023-05-31</item>
        <item>2023-05-31</item>
        <item>2023-07-19</item>
        <item>2023-06-13</item>
        <item>2023-08-02</item>
        <item>2023-07-14</item>
        <item>2023-07-19</item>
        <item>2023-06-15</item>
    </string-array>

    <string-array name="data_genre">
        <item>Animation</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Action</item>
        <item>Romance</item>
        <item>Action</item>
        <item>Adventure</item>
        <item>Action</item>
        <item>Horror</item>
        <item>Romance</item>
    </string-array>

    <string-array name="data_duration">
        <item>2h 45min</item>
        <item>2h 41min</item>
        <item>3h 25min</item>
        <item>1h 59min</item>
        <item>2h 19min</item>
        <item>3h 22min</item>
        <item>3h 16min</item>
        <item>2h 37min</item>
        <item>3h 41min</item>
        <item>2h 40min</item>
    </string-array>

    <string-array name="data_rating">
        <item>4.5/5</item>
        <item>4.7/5</item>
        <item>4.8/5</item>
        <item>4.1/5</item>
        <item>4.6/5</item>
        <item>4.0/5</item>
        <item>4.9/5</item>
        <item>4.2/5</item>
        <item>4.3/5</item>
        <item>4.7/5</item>
    </string-array>


</resources>